--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
-    "next": "15.5.2",
+    "next": "^16.0.1",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
