--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^1.0.6",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "next": "^16.0.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
